# ImageLoadingPipeline

./: CMakeLists.txt  README.md  example.cpp
datatype/: CMakeLists.txt
datatype/src/: file.h  image.h
load_image_pipeline/: CMakeLists.txt
load_image_pipeline/src/: format_types.h  load_image_pipeline.cpp  load_image_pipeline.h
